--- a/bibliography.bib
+++ b/bibliography.bib
@@ -221,7 +221,30 @@ month={Jan}
 }
 
 % webpages online
-<<<<<<< Updated upstream
+@online{linder2006okc,
+	title = {The {Oklahoma City} Bombing \& The Trial of {Timothy McVeigh}},
+	url = {http://law2.umkc.edu/faculty/projects/ftrials/mcveigh/mcveighaccount.html},
+	urldate = {2019-09-08},
+	year = {2006},
+	author = {Douglas O. Linder},
+}
+
+@online{fbi2015okc,
+	title = {{Oklahoma City Bombing} 20 Years Later},
+	url = {https://www.fbi.gov/news/stories/oklahoma-city-bombing-20-years-later},
+	urldate = {2019-09-08},
+	year = {2015},
+	author = {{FBI}},
+}
+
+@online{history2018okc,
+	title = {{Oklahoma City} bombing},
+	url = {https://www.history.com/topics/1990s/oklahoma-city-bombing},
+	urldate = {2019-09-08},
+	year = {2018},
+	author = {{History.com Editors}},
+}
+
 @online{ferris2019congress,
 	title = {Another {GOP} lawmaker blocks massive disaster aid package},
 	url = {https://www.politico.com/story/2019/05/28/another-gop-lawmaker-blocks-massive-disaster-aid-package-1345524},
@@ -299,15 +322,6 @@ month={Jan}
 	urldate = {2004-11-23},
 	year = {2004},
 	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-=======
-<<<<<<< Updated upstream
-@online{femanims, 
-	title = {{NIMS and the Incident Command System}},
-	url = {https://www.fema.gov/txt/nims/nims_ics_position_paper.txt},
-	author = {{FEMA}},
-	urldate = {2004=11-23},
-	year = {2004},
->>>>>>> Stashed changes
 }
 
 @online{femaabout,
