--- a/bibliography.bib
+++ b/bibliography.bib
@@ -221,6 +221,14 @@ month={Jan}
 }
 
 % webpages online
+@online{kurmelovs2017aum,
+	title = {Did a Japanese Cult Detonate a Nuclear Bomb in the {Australiani} Desert?},
+	url = {https://www.vice.com/en_ca/article/7xkv7q/did-a-japanese-cult-detonate-a-nuclear-bomb-in-the-australian-desert},
+	urldate = {2019-09-09},
+	year = {2017},
+	author = {Royce Kurmelovs},
+}
+
 @online{linder2006okc,
 	title = {The {Oklahoma City} Bombing \& The Trial of {Timothy McVeigh}},
 	url = {http://law2.umkc.edu/faculty/projects/ftrials/mcveigh/mcveighaccount.html},
