--- a/bibliography.bib
+++ b/bibliography.bib
@@ -221,6 +221,30 @@ month={Jan}
 }
 
 % webpages online
+@online{alkhudary2019speicher,
+	title = {Five years on, still no justice for Iraq's {Camp Speicher} victims},
+	url = {https://www.aljazeera.com/indepth/opinion/years-justice-iraq-camp-speicher-victims-190612085910106.html},
+	urldate = {2019-09-09},
+	year = {2019},
+	author = {Taif Akhudary},
+}
+
+@online{cockburn2017speicher,
+	title = {Camp {Speicher} massacre: Retracing the steps of Isis's worst-ever atrocity},
+	url = {https://www.independent.co.uk/news/world/middle-east/camp-speicher-massacre-isis-islamic-state-tikrit-air-academy-iraq-a8040576.html},
+	urldate = {2019-09-09},
+	year = {2017},
+	author = {Patrick Cockburn},
+}
+
+@online{bbc2018aum,
+	title = {Tokyo Sarin attack: {Aum Shinrikyo} cult leaders executed},
+	url = {https://www.bbc.com/news/world-asia-43395483},
+	urldate = {2019-09-09},
+	year = {2018},
+	author = {{BBC}},
+}
+
 @online{kurmelovs2017aum,
 	title = {Did a Japanese Cult Detonate a Nuclear Bomb in the {Australiani} Desert?},
 	url = {https://www.vice.com/en_ca/article/7xkv7q/did-a-japanese-cult-detonate-a-nuclear-bomb-in-the-australian-desert},
