--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,24 @@
 }
 
 % articles
+@article{fleming1980deed,
+author = { Marie   Fleming },
+title = {Propaganda by the deed: Terrorism and anarchist theory in late nineteenth‐century Europe},
+journal = {Terrorism},
+volume = {4},
+number = {1-4},
+pages = {1-23},
+year  = {1980},
+publisher = {Routledge},
+doi = {10.1080/10576108008435483},
+URL = { 
+        https://doi.org/10.1080/10576108008435483
+},
+eprint = { 
+        https://doi.org/10.1080/10576108008435483
+}
+}
+
 @article{himescornell2018factors,
 	title = {Factors Affecting Disaster Preparedness, Response, and Recovery Using the Community Capitals Framework},
 	author = {Amber Himes-Cornell and Carlos Ormond},
@@ -221,6 +239,14 @@ month={Jan}
 }
 
 % webpages online
+@online{bruce2019definition,
+	title = {Definition of Terrorism – Social and Political Effects},
+	url = {https://jmvh.org/article/definitionof-terrorism-social-and-political-effects/},
+	author = {Gregor Bruce},
+	year = {2019},
+	urldate = {2019-09-15},
+}
+
 @online{alkhudary2019speicher,
 	title = {Five years on, still no justice for Iraq's {Camp Speicher} victims},
 	url = {https://www.aljazeera.com/indepth/opinion/years-justice-iraq-camp-speicher-victims-190612085910106.html},
