--- a/bibliography.bib
+++ b/bibliography.bib
@@ -239,6 +239,14 @@ month={Jan}
 }
 
 % webpages online
+@online{pike2005ira,
+	title = {Irish Republican Army (IRA), Provisional Irish Republican Army (PIRA), the Provos, Direct Action Against Drugs (DAAD)},
+	url = {https://fas.org/irp/world/para/ira.htm},
+	author = {John Pike},
+	urldate = {2019-09-15},
+	year = {2005},
+}
+
 @online{bruce2019definition,
 	title = {Definition of Terrorism – Social and Political Effects},
 	url = {https://jmvh.org/article/definitionof-terrorism-social-and-political-effects/},
