--- a/bibliography.bib
+++ b/bibliography.bib
@@ -239,6 +239,30 @@ month={Jan}
 }
 
 % webpages online
+@online{tribune2015antiabortion,
+	title = {'No more baby parts': Reclusive suspect's words draw focus},
+	author = {{Hartford Current}},
+	urldate = {2019-09-15},
+	year = {2015},
+	url = {https://www.courant.com/nation-world/ct-planned-parenthood-shooting-20151129-story.html},
+}
+
+@online{tnn2014graham,
+	url = {https://timesofindia.indiatimes.com/india/Two-acquitted-in-Graham-Staines-murder-case/articleshow/31087879.cms},
+	author = {{TNN}},
+	urldate = {2019-09-15},
+	year = {2014},
+	title = {Two acquitted in {Graham Staines} murder case},
+}
+
+@online{raj2017saffron,
+	title = {Hindu Cow Vigilantes in {Rajasthan, India}, Beat Muslim to Death},
+	author = {Suhasini Raj},
+	url = {https://www.nytimes.com/2017/04/05/world/asia/india-cow-mob-hindu-vigilantes.html},
+	urldate = {2019-09-15},
+	year = {2017},
+}
+
 @online{pike2005ira,
 	title = {Irish Republican Army (IRA), Provisional Irish Republican Army (PIRA), the Provos, Direct Action Against Drugs (DAAD)},
 	url = {https://fas.org/irp/world/para/ira.htm},
