--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,6 +51,31 @@
 }
 
 % articles
+
+
+
+
+
+
+@article{sidanius2004attributions,
+author = {Jim Sidanius and P. J. Henry and Felicia Pratto and Shana Levin},
+title ={Arab Attributions for the Attack on America: The Case of Lebanese Subelites},
+journal = {Journal of Cross-Cultural Psychology},
+volume = {35},
+number = {4},
+pages = {403-416},
+year = {2004},
+doi = {10.1177/0022022104266106},
+URL = { 
+        https://doi.org/10.1177/0022022104266106
+},
+eprint = { 
+        https://doi.org/10.1177/0022022104266106
+}
+,
+    abstract = { There are at least two major ways of understanding the attributions that Arab young people used to explain the September 11th attack on the World Trade Center: (a) in terms of a so-called clash of civilizations or an inherent conflict between Muslim and Western values or (b) in terms of an antidominance reaction to perceived American and Israeli oppression of Arabs in general and Palestinians in particular. The authors compare the relative validities of these two framings using a sample of Lebanese students from the American University of Beirut. The results from analysis of variance, regression, and structural equation modeling showed strong, clear, andconsistentsupportforthe antidominance attributionsandessentially nosupport for the clash-of-civilizations attributions. }
+}
+
 @article{fleming1980deed,
 author = { Marie   Fleming },
 title = {Propaganda by the deed: Terrorism and anarchist theory in late nineteenth‐century Europe},
@@ -239,6 +264,14 @@ month={Jan}
 }
 
 % webpages online
+@online{cnn2019taliban,
+	title = {Taliban Fast Facts},
+	author = {{CNN}},
+	urldate = {2019-09-15},
+	year = {2019},
+	url = {https://www.cnn.com/2013/09/20/world/taliban-fast-facts/index.html},
+}
+
 @online{tribune2015antiabortion,
 	title = {'No more baby parts': Reclusive suspect's words draw focus},
 	author = {{Hartford Current}},
