--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,10 +51,25 @@
 }
 
 % articles
-
-
-
-
+@article{pyszsczynski2006mortality,
+author = {Tom Pyszczynski and Abdolhossein Abdollahi and Sheldon Solomon and Jeff Greenberg and Florette Cohen and David Weise},
+title ={Mortality Salience, Martyrdom, and Military Might: The Great Satan Versus the Axis of Evil},
+journal = {Personality and Social Psychology Bulletin},
+volume = {32},
+number = {4},
+pages = {525-537},
+year = {2006},
+doi = {10.1177/0146167205282157},
+note ={PMID: 16513804},
+URL = { 
+        https://doi.org/10.1177/0146167205282157
+},
+eprint = { 
+        https://doi.org/10.1177/0146167205282157
+}
+,
+    abstract = { Study 1 investigated the effect of mortality salience on support for martyrdom attacks among Iranian college students. Participants were randomly assigned to answer questions about either their own death or an aversive topic unrelated to death and then evaluated materials from fellow students who either supported or opposed martyrdom attacks against the United States. Whereas control participants preferred the student who opposed martyrdom, participants reminded of death preferred the student who supported martyrdom and indicated they were more likely to consider such activities themselves. Study 2 investigated the effect of mortality salience on American college students' support for extreme military interventions by American forces that could kill thousands of civilians. Mortality salience increased support for such measures among politically conservative but not politically liberal students. The roles of existential fear, cultural worldviews, and construing one's nation as pursing a heroic battle against evil in advocacy of violence were discussed. }
+}
 
 
 @article{sidanius2004attributions,
