--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,14 @@ month={Jan}
 }
 
 % webpages online
+@online{reitman2013jahar,
+	title = {Jahar's World},
+	author = {Janet Reitman},
+	urldate = {2019-09-22},
+	year = {2013},
+	url = {https://www.rollingstone.com/culture/culture-news/jahars-world-83856/},
+}
+
 @online{cnn2019taliban,
 	title = {Taliban Fast Facts},
 	author = {{CNN}},
