--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,22 @@ month={Jan}
 }
 
 % webpages online
+@online{schuppe2013tale,
+	url = {https://www.nbcphiladelphia.com/news/national-international/Boston-Bombing-Suspects-are-Russian-Brothers-Officials-Say-203757531.html},
+	title = {Brothers' Classic Immigrant Tale Emerges as Relatives Speak Out},
+	author = {Jon Schuppe},
+	urldate = {2019-09-22},
+	year = {2013},
+}
+
+@online{cbp2015tamerlan,
+	url = {https://www.uscis.gov/sites/default/files/USCIS/About%20Us/Electronic%20Reading%20Room/A-Files%20of%20Interest%20-%20Static%20Files/Tamerlan_Tsarnaev.pdf},
+	title = {Tamerlan Tsarnaev Immigration File},
+	author = {{U.S. Customs \& Border Protection}},
+	urldate = {2019-09-22},
+	year = {2015},
+}
+
 @online{reitman2013jahar,
 	title = {Jahar's World},
 	author = {Janet Reitman},
