--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,30 @@ month={Jan}
 }
 
 % webpages online
+@online{russell2013brothers,
+	title = {Brothers veered violently off track},
+	url = {https://www3.bostonglobe.com/metro/2013/04/19/relatives-marathon-bombing-suspects-worried-that-older-brother-was-corrupting-sweet-younger-sibling/UCYHkiP9nfsjAtMjJPWJJL/story.html?arc404=true},
+	author = {Jenna Russell and Jenn Abelson and Patricia Wen and Michael Rezendes and David Filipov},
+	urldate = {2019-09-23},
+	year = {2013},
+}
+
+@online{kaleem2013huffpo,
+	title = {Boston Bombing Suspects’ {Muslim} Identity Provides Few Clues To Motivation For Bombing},
+	url = {https://www.huffpost.com/entry/boston-bombing-suspects-muslim_n_3116299?guccounter=1},
+	author = {Jaweed Kaleem},
+	urldate = {2019-09-22},
+	year = {2013},
+}
+
+@online{latimes2013tamerlan,
+	title = {The {Tsarnaev} brothers’ troubled trail to {Boston}},
+	url = {https://www.latimes.com/nation/la-na-boston-suspects-20130428-dto-htmlstory.html},
+	author = {Kim Murphy and Joseph Tanfani and Sergei L. Loiko},
+	urldate = {2019-09-23},
+	year = {2013},
+}
+
 @online{schuppe2013tale,
 	url = {https://www.nbcphiladelphia.com/news/national-international/Boston-Bombing-Suspects-are-Russian-Brothers-Officials-Say-203757531.html},
 	title = {Brothers' Classic Immigrant Tale Emerges as Relatives Speak Out},
