--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,30 @@ month={Jan}
 }
 
 % webpages online
+@online{fbi2019domestic,
+	url = {https://www.fbi.gov/news/testimony/confronting-the-rise-of-domestic-terrorism-in-the-homeland},
+	author = {Michael C. McGarrity},
+	title = {Confronting the Rise of Domestic Terrorism in the Homeland},
+	urldate = {2019-10-06},
+	year = {2019},
+}
+
+@online{byman2019domestic,
+	url = {https://slate.com/news-and-politics/2019/08/right-wing-terrorist-killings-government-focus-jihadis-islamic-radicalism.html},
+	author = {Daniel Byman},
+	title = {Right-Wingers Are America’s Deadliest Terrorists},
+	urldate = {2019-10-06},
+	year = {2019},
+}
+
+@online{barrett2019domestic,
+	title = {Arrests in domestic terror probes outpace those inspired by Islamic extremists},
+	url = {https://www.washingtonpost.com/world/national-security/arrests-in-domestic-terror-probes-outpace-those-inspired-by-islamic-extremists/2019/03/08/0bf329b6-392f-11e9-a2cd-307b06d0257b_story.html},
+	author = {Devlin Barrett},
+	urldate = {2019-10-06},
+	year = {2019},
+}
+
 @online{russell2013brothers,
 	title = {Brothers veered violently off track},
 	url = {https://www3.bostonglobe.com/metro/2013/04/19/relatives-marathon-bombing-suspects-worried-that-older-brother-was-corrupting-sweet-younger-sibling/UCYHkiP9nfsjAtMjJPWJJL/story.html?arc404=true},
