--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,6 @@
 % textbooks
+@book{dellaporta_2013, place={Cambridge}, series={Cambridge Studies in Contentious Politics}, title={Clandestine Political Violence}, DOI={10.1017/CBO9781139043144}, publisher={Cambridge University Press}, author={della Porta, Donatella}, year={2013}, collection={Cambridge Studies in Contentious Politics}}
+
 @book{clarke2010cyberwar,
 	title = {Cyberwar: The Next Threat to National Security \& What to Do About It},
 	author = {Richard A. Clarke and Robert Knake},
@@ -279,6 +281,54 @@ month={Jan}
 }
 
 % webpages online
+@online{vera2019time,
+	url = {https://time.com/5647304/white-nationalist-terrorism-united-states/},
+	title = {‘We Are Being Eaten From Within.’ Why America Is Losing the Battle Against White Nationalist Terrorism},
+	author = {Vera Bergengruen AND W.J. Hennigan},
+	urldate = {2019-10-08},
+	year = {2019},
+}
+
+@online{aaronson2019double,
+	url = {https://theintercept.com/2019/03/23/domestic-terrorism-fbi-prosecutions/},
+	title = {Terrorism's Double Standard},
+	author = {Trevor Aaronson},
+	urldate = {2019-10-08},
+	year = {2019},
+}
+
+@online{arango2019elpaso,
+	title = {Minutes Before El Paso Killing, Hate-Filled Manifesto Appears Online},
+	url = {https://www.nytimes.com/2019/08/03/us/patrick-crusius-el-paso-shooter-manifesto.html},
+	author = {Tim Arango and Nicholas Bogel-Burroughs and Katie Benner},
+	urldate = {2019-10-08},
+	year = {2019},
+}
+
+@online{conor2018youtube,
+	url = {https://www.theatlantic.com/politics/archive/2018/03/youtube-extremism-and-the-long-tail/555350/},
+	title = {YouTube Extremism and the Long Tail},
+	author = {Conor Friedersdorf},
+	urldate = {2019-10-08},
+	year = {2018},
+}
+
+@online{knight2018facebook,
+	title = {Explainer: how Facebook has become the world’s largest echo chamber},
+	url = {https://theconversation.com/explainer-how-facebook-has-become-the-worlds-largest-echo-chamber-91024},
+	author = {Megan Knight},
+	urldate = {2019-10-08},
+	year = {2018},
+}
+
+@online{gibson2019recruiting,
+	url = {https://www.washingtonpost.com/lifestyle/on-parenting/do-you-have-white-teenage-sons-listen-up-how-white-supremacists-are-recruiting-boys-online/2019/09/17/f081e806-d3d5-11e9-9343-40db57cf6abd_story.html},
+	author = {Caitlin Gibson},
+	title = {‘Do you have white teenage sons? Listen up.’ How white supremacists are recruiting boys online.},
+	urldate = {2019-10-08},
+	year = {2019},
+}
+
 @online{fbi2019domestic,
 	url = {https://www.fbi.gov/news/testimony/confronting-the-rise-of-domestic-terrorism-in-the-homeland},
 	author = {Michael C. McGarrity},
