--- a/bibliography.bib
+++ b/bibliography.bib
@@ -281,6 +281,46 @@ month={Jan}
 }
 
 % webpages online
+@online{zucchino2019kabul,
+	url = {https://www.nytimes.com/2019/09/03/world/asia/kabul-bombing-afghanistan.html},
+	title = {After Bombing, {Afghans} Demand That Foreigners Leave Their Neighborhood},
+	author = {David Zucchino and Fatima Faizi},
+	urldate = {2019-10-12},
+	year = {2019},
+}
+
+@online{searcey2019boko,
+	url = {https://www.nytimes.com/2019/09/13/world/africa/nigeria-boko-haram.html},
+	title = {{Boko Haram} is back. {With} better drones.},
+	author = {Dionne Searcey},
+	urldate = {2019-10-12},
+	year = {2019},
+}
+
+@online{prashanth2019malaysia,
+	title = {{US-Malaysia} Counterterrorism Cooperation in the Spotlight with Home Minister Visit},
+	url = {https://thediplomat.com/2019/09/us-malaysia-counterterrorism-cooperation-in-the-spotlight-with-home-minister-visit/},
+	author = {Prashanth Parameswaran},
+	urldate = {2019-10-12},
+	year = {2019},
+}
+
+@online{simcox2019nederland,
+	title = {The {Netherlands} luck is running out},
+	url = {https://foreignpolicy.com/2019/03/25/the-netherlands-luck-is-running-out/},
+	author = {Robin Simcox},
+	urldate = {2019-10-12},
+	year = {2019},
+}
+
+@online{hauser2019hasson,
+	title = {Coast Guard Officer Called a ‘Domestic Terrorist’ Pleads Guilty to Gun and Drug Charges},
+	url = {https://www.nytimes.com/2019/10/03/us/christopher-hasson-coast-guard-white-supremacist.html},
+	author = {Christine Hauser},
+	urldate = {2019-10-12},
+	year = {2019},
+}
+
 @online{vera2019time,
 	url = {https://time.com/5647304/white-nationalist-terrorism-united-states/},
 	title = {‘We Are Being Eaten From Within.’ Why America Is Losing the Battle Against White Nationalist Terrorism},
