--- a/bibliography.bib
+++ b/bibliography.bib
@@ -53,6 +53,14 @@
 }
 
 % articles
+@article{jongerden2012pkk,
+	author = {Joost Jongerden and Ahmet Hamdi Akkaya},
+	title = {The {Kurdistan Workers Party} and a {New Left} in {Turkey}: Analysis of the revolutionary movement in {Turkey} through the {PKK}’s memorial text on {Haki Karer}},
+	journal = {European Journal of Turkish Studies},
+	volume = {14},
+	year = {2014},
+}
+	
 @article{pyszsczynski2006mortality,
 author = {Tom Pyszczynski and Abdolhossein Abdollahi and Sheldon Solomon and Jeff Greenberg and Florette Cohen and David Weise},
 title ={Mortality Salience, Martyrdom, and Military Might: The Great Satan Versus the Axis of Evil},
@@ -281,6 +289,22 @@ month={Jan}
 }
 
 % webpages online
+@online{kurdeparis,
+	title = {The {Kurdish} population},
+	author = {{Institut Kurde de Paris}},
+	url = {https://www.institutkurde.org/en/info/the-kurdish-population-1232551004},
+	urldate = {2019-10-13},
+	year = {2017},
+}
+
+@online{bbc2019kurds,
+	url = {https://www.bbc.com/news/world-middle-east-29702440},
+	title = {Who are the {Kurds}?},
+	author = {{BBC}},
+	urldate = {2019-10-13},
+	year = {2019},
+}
+
 @online{zucchino2019kabul,
 	url = {https://www.nytimes.com/2019/09/03/world/asia/kabul-bombing-afghanistan.html},
 	title = {After Bombing, {Afghans} Demand That Foreigners Leave Their Neighborhood},
