--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,15 @@
 % textbooks
+@book{pape2006dying,
+   title =     {Dying to Win: The Strategic Logic of Suicide Terrorism},
+   author =    {Robert Pape},
+   publisher = {Random House Trade Paperbacks},
+   isbn =      {0812973380,9780812973389},
+   year =      {2006},
+   series =    {},
+   edition =   {Reprint},
+   volume =    {},
+}
+
 @book{dellaporta_2013, place={Cambridge}, series={Cambridge Studies in Contentious Politics}, title={Clandestine Political Violence}, DOI={10.1017/CBO9781139043144}, publisher={Cambridge University Press}, author={della Porta, Donatella}, year={2013}, collection={Cambridge Studies in Contentious Politics}}
 
 @book{clarke2010cyberwar,
@@ -53,6 +64,49 @@
 }
 
 % articles
+@article{piazza2008supply,
+  title={A supply-side view of suicide terrorism: A cross-national study},
+  author={Piazza, James A},
+  journal={The Journal of Politics},
+  volume={70},
+  number={1},
+  pages={28--39},
+  year={2008},
+  publisher={Cambridge University Press New York, USA}
+}
+
+@article{novellis2018women,
+ ISSN = {25152130, 25152149},
+ URL = {https://www.jstor.org/stable/10.13169/zanjglobsoutstud.2.1.0115},
+ abstract = {Studies on women in nationalist guerrilla movements, such as in Sri Lanka and Angola, find that women's militancy has not lead to changes in traditional patriarchal structures. Contradicting much of the current literature, today Kurdish women have gained substantial equality in the PKK, and the Party's ideology actively promotes a subversion of traditional gender structures. Using existing interviews with militants and academic literature, I will give a nuanced view of the progressive transition of the PKK's political ideology on women. During the early 1990s, the PKK's emancipatory stance and reinterpretation of Kurdish myths were employed pragmatically to increase women's participation. However, patriarchal structures remained unchanged and female militants were merely handed over from a patriarchal family to a patriarchal party. Despite this, the autonomous Women's Army (YJAK) became a “safe space” from which self-organized and armed women actively influenced the PKK's ideology and practice. Legitimized by the PKK's own emancipatory propaganda, the YJAK pushed the party towards a more radical feminist agenda by loyally aligning themselves to the “father figure” Öcalan during setbacks in the late 1990s. The current prominence of the PKK's feminist agenda suggests female militants can undermine and challenge patriarchal structures from within the structure of a nationalist movement.},
+ author = {Andrea Novellis},
+ journal = {Zanj: The Journal of Critical Global South Studies},
+ number = {1},
+ pages = {115--133},
+ publisher = {Pluto Journals},
+ title = {The Rise of Feminism in the PKK: Ideology or Strategy?},
+ volume = {2},
+ year = {2018}
+}
+
+@article{ergil2000suicide,
+author = { Doğu   Ergil },
+title = {Suicide terrorism in Turkey},
+journal = {Civil Wars},
+volume = {3},
+number = {1},
+pages = {37-54},
+year  = {2000},
+publisher = {Routledge},
+doi = {10.1080/13698240008402430},
+URL = { 
+        https://doi.org/10.1080/13698240008402430
+},
+eprint = { 
+        https://doi.org/10.1080/13698240008402430
+}
+}
+
 @article{jongerden2012pkk,
 	author = {Joost Jongerden and Ahmet Hamdi Akkaya},
 	title = {The {Kurdistan Workers Party} and a {New Left} in {Turkey}: Analysis of the revolutionary movement in {Turkey} through the {PKK}’s memorial text on {Haki Karer}},
@@ -289,6 +343,46 @@ month={Jan}
 }
 
 % webpages online
+@online{murphy2014monitor,
+	title = {{Are the US, France, and UK lining up to support the 'terrorist' PKK in Iraq?}},
+	author = {Dan Murphy},
+	url = {https://www.csmonitor.com/World/Security-Watch/Backchannels/2014/0815/Are-the-US-France-and-UK-lining-up-to-support-the-terrorist-PKK-in-Iraq},
+	urldate = {2019-10-13},
+	year = {2014},
+}
+
+@online{ezidi2015france,
+	title = {Video: A rare look inside the {Kurdish} rebel movement},
+	author = {Lilith Ezidi and Mateo Dara},
+	url = {https://www.france24.com/en/20151113-video-reporter-pkk-kurdistan-iraq-turkey-kurds-ergodan-islamic-state},
+	urldate = {2019-10-13},
+	year = {2015},
+}
+
+@online{kinzer1996tunceli,
+	title = {Kurdish Suicide Bomber Kills 9 {Turkish} Soldiers},
+	author = {Stephen Kinzer},
+	url = {https://www.nytimes.com/1996/07/03/world/kurdish-suicide-bomber-kills-9-turkish-soldiers.html},
+	urldate = {2019-10-13},
+	year = {1996},
+}
+
+@online{zaman1999ocalan,
+	title = {Turkey Celebrates Capture of {Ocalan}},
+	author = {Amberin Zaman},
+	url = {https://www.washingtonpost.com/wp-srv/inatl/daily/feb99/ocalanturkey18.htm},
+	urldate = {2019-10-13},
+	year = {1999},
+}
+
+@online{suri2005kurds,
+	title = {Torture and Oppression of {Kurds} in {Syria}},
+	author = {Sanjay Suri},
+	url = {https://original.antiwar.com/sanjay-suri/2005/03/11/torture-and-oppression-of-kurds-in-syria/},
+	urldate = {2019-10-13},
+	year = {2005},
+}
+
 @online{kurdeparis,
 	title = {The {Kurdish} population},
 	author = {{Institut Kurde de Paris}},
