--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,12 @@
 % textbooks
+@book{abrahamian1989radical,
+  title={{Radical Islam: The Iranian Mojahedin}},
+  author={Abrahamian, Ervand},
+  volume={3},
+  year={1989},
+  publisher={IB Tauris}
+}
+
 @book{pape2006dying,
    title =     {Dying to Win: The Strategic Logic of Suicide Terrorism},
    author =    {Robert Pape},
