--- a/bibliography.bib
+++ b/bibliography.bib
@@ -71,6 +71,14 @@
    volume =    {},
 }
 
+% techreport
+@techreport{goulka2009mujahedin,
+  title={{The Mujahedin-e Khalq in Iraq}: A Policy Conundrum},
+  author={Goulka, Jeremiah and Hansell, Lydia and Wilke, Elizabeth and Larson, Judith},
+  year={2009},
+  institution={RAND National Defense Research Institute Santa Monica, CA}
+}
+
 % articles
 @article{piazza2008supply,
   title={A supply-side view of suicide terrorism: A cross-national study},
@@ -351,6 +359,14 @@ month={Jan}
 }
 
 % webpages online
+@online{masters2014backgrounder,
+	title = {{Mujahadeen-e-Khalq (MEK)}},
+	author = {Jonathan Masters},
+	url = {https://www.cfr.org/backgrounder/mujahadeen-e-khalq-mek},
+	urldate = {2019-10-18},
+	year = {2014},
+}
+
 @online{murphy2014monitor,
 	title = {{Are the US, France, and UK lining up to support the 'terrorist' PKK in Iraq?}},
 	author = {Dan Murphy},
