--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,15 @@
 % textbooks
+@book{chelkowski1988ideology,
+   title =     {Ideology and Power in the Middle East: Studies in Honor of George Lenczowski},
+   author =    {Peter J. Chelkowski and Robert J. Pranger},
+   publisher = {Duke University Press},
+   isbn =      {0822307812,9780822307815},
+   year =      {1988},
+   series =    {},
+   edition =   {},
+   volume =    {},
+}
+
 @book{abrahamian1989radical,
   title={{Radical Islam: The Iranian Mojahedin}},
   author={Abrahamian, Ervand},
@@ -359,6 +370,22 @@ month={Jan}
 }
 
 % webpages online
+@online{dehghan2013election,
+	title = {Iranian presidential elections 2013: the essential guide},
+	url = {https://www.theguardian.com/world/2013/may/13/iranian-presidential-election-2013-iran},
+	urldate = {2019-10-20},
+	year = {2013},
+	author = {Saeed Kamali Dehghan},
+}
+	
+@online{farda2018samadi,
+	title = {Another Twist In Mysterious Murder  Of 1981 {Tehran} Bombing Suspect},
+	author = {{Radio Farda}},
+	url = {https://en.radiofarda.com/a/another-twist-in-mysterious-murder-of-1981-tehran-bombing-suspect-/29259096.html},
+	urldate = {2019-10-18},
+	year = {2018},
+}
+
 @online{masters2014backgrounder,
 	title = {{Mujahadeen-e-Khalq (MEK)}},
 	author = {Jonathan Masters},
