Pushing to repo

--- a/apa.tex
+++ b/apa.tex
@@ -54,11 +54,11 @@ final=1]
 % title, etc.
 \title{Title}
 \shorttitle{Shortitle}
-\author{Writing W. Writer}
+\author{Garrett Jansen}
 
 % The following four fields make up some of the front matter of your document. If working on an assignment for a course, I typically use "affiliation" for the class name. I have commented out abstract since minimal usage doesn't require it and leaving it blank will generate a blank page. Ignore the warning about the lack of abstract. 
 
-\affiliation{Writing Institute}
+\affiliation{Wilmington University}
 %\abstract{}
 %\keywords{}
 %\authornote{}
